[gd_scene load_steps=13 format=3 uid="uid://d1y8jdicca0ja"]

[ext_resource type="Script" path="res://common/game.gd" id="1_nixut"]
[ext_resource type="Environment" uid="uid://cj5a4clofvpeq" path="res://common/day_environment.tres" id="2_d8gdf"]
[ext_resource type="PackedScene" uid="uid://cdevl400jk456" path="res://terrain_3d/terrain_3d.tscn" id="3_0vj7r"]
[ext_resource type="PackedScene" uid="uid://4xgl4drja75q" path="res://ui/main_menu.tscn" id="3_3ao77"]
[ext_resource type="PackedScene" uid="uid://2oxdgu03lnbk" path="res://kinematic_fps_controller/kinematic_fps_controller.tscn" id="3_m520b"]
[ext_resource type="Script" path="res://common/door.gd" id="4_25n3v"]

[sub_resource type="NavigationMesh" id="NavigationMesh_od0y4"]
vertices = PackedVector3Array(-49.8, 0.429276, -1.15, -1.7, 0.179276, -1.15, -1.7, 0.179276, -1.55, -26.5258, -0.0707238, -1.34355, -35.8355, 0.429276, -1.26613, -35.8355, 0.429276, -1.15, -26.5258, -0.0707238, -1.15, -1.55, 0.179276, -1.7, -1.15, 0.179276, -1.7, -1.15, -0.0707238, -49.8, -1.33064, -0.320724, -28.0774, -1.15, -0.320724, -28.0774, -49.8, -0.320724, -49.8, -49.8, 0.429276, -34.1065, -12.1355, -0.0707238, -49.8, -16.8435, -0.570724, -49.8, -27.829, -0.820724, -49.8, -17.9042, -0.320724, -5.30338, -19.0973, -0.0707238, -33.499, -14.2995, -0.570724, -44.6025, -11.5982, 0.179276, -11.6044, -26.5966, -0.570724, -36.8013, -26.5965, 0.179276, -20.2966, -20.8962, -0.320724, -17.0015, -31.9973, -0.0707238, -9.19872, -10.103, -0.0707238, -37.9968, -21.4989, -0.320724, -29.3009, -38.8967, 0.429276, -18.7997, -31.6972, 0.179276, -30.2038, -29.298, 0.179276, -11.3047, -33.7962, -0.0707238, -38.0004, -41.5968, -0.570724, -44.6025, -29.5988, -0.0707238, -14.3008, -26.8993, 0.179276, -15.4985, -23.0009, -0.320724, -11.2985, -38.5975, -0.320724, -45.2037, -16.704, -0.320724, -12.2005, -30.2022, -0.820724, -45.7953, -10.1019, 0.179276, -3.49991, -28.3989, -0.0707238, -23.0043, -43.7027, -0.0707238, -42.1952, -45.4982, -0.0707238, -37.1014, -43.4026, 0.429276, -31.999, -0.799999, 0.179276, -1.7, -0.799999, -0.0707238, -49.8, -0.799999, -0.320724, -28.0774, -0.25, 0.179276, -1.5, 0.299999, 0.179276, -1.45, 0.450001, 0.179276, -1.7, 0.850002, -0.0707238, -49.8, -0.399998, 0.179276, -1.7, 0.566132, 0.179276, -15.6645, 0.656452, -0.320724, -26.5258, -0.619354, -0.320724, -28.0774, 0.102535, 0.179276, -15.4994, 0.850002, 0.179276, -1.7, 0.850002, 0.179276, -15.6645, 0.850002, -0.320724, -26.5258, 1.2, 0.179276, -1.7, 1.2, -0.0707238, -49.8, 1.75, 0.179276, -1.55, 1.75, 0.179276, -1.25, 49.8, 0.429276, -1.3, 7.95, -0.0707238, -1.51774, 6.4, -0.0707238, -1.25484, 1.6, 0.179276, -1.7, 49.8, -0.320724, -49.8, 49.8, 0.429276, -32.5903, 29.4194, -0.820724, -49.8, 7.60394, -0.820724, -22.1, 29.7966, 0.429276, -15.5008, 19.8951, -0.320724, -37.6982, 23.4971, -0.570724, -29.8977, 5.79989, -0.0707238, -14.2991, 16.9022, -0.320724, -14.8965, 24.0971, -0.0707238, -11.9021, 1.90015, -0.320724, -26.6026, 9.70319, -0.570724, -40.6968, 18.0953, -0.320724, -44.5973, 11.2005, -0.570724, -46.7036, 11.2009, 0.179276, -6.49714, 7.60197, -0.320724, -11.903, 3.09845, -0.0707238, -24.7975, 1.89856, 0.179276, -16.104, 29.5036, -0.0707238, -31.1013, 26.1995, -0.570724, -33.5006, 5.20424, -0.320724, -24.2033, 8.79782, -0.820724, -26.9015, 33.1019, -0.0707238, -25.3965, 37.2976, 0.429276, -19.398, 27.6988, -0.0707238, -27.8012, -1.55, 2.42928, -1.55, -1.55, 2.42928, 1.55, 1.55, 2.42928, 1.55, 1.55, 2.42928, -1.55, 0.450001, 0.179276, -1.2, -0.450001, 0.179276, -1.2, -1.2, 0.179276, 1.25, 1.25, 0.179276, 1.25, 1.25, 0.179276, -1.2, -1.2, 0.179276, -1.2, 1.75, 0.179276, 1.25, 49.8, 0.429276, 1.3, 7.95, -0.0707238, 1.25645, -49.8, 0.429276, 1.2, -1.7, 0.179276, 1.2, -35.8355, 0.429276, 1.2, -28.0774, -0.0707238, 1.2, -1.3, -0.0707238, 49.8, -1.25, 0.179276, 1.75, -1.55, 0.179276, 1.75, -1.47742, -0.570724, 15.7, -1.26451, -0.570724, 15.7, -1.7, 0.179276, 1.6, -35.8355, 0.429276, 1.31613, -28.0774, -0.0707238, 1.38065, -49.8, -0.320724, 49.8, -26.3323, -0.820724, 49.8, -10.6871, -0.0707238, 49.8, -49.8, 0.179276, 4.33548, -49.8, -1.07072, 9.03871, -49.8, -1.32072, 20.0129, -49.8, -1.32072, 30.9871, -27.4954, -1.32072, 32.7966, -33.4991, -0.820724, 11.1966, -16.4009, -0.320724, 25.3032, -15.7956, -0.820724, 33.4011, -26.6026, -0.570724, 43.6012, -32.8998, -1.07072, 42.6969, -10.9978, -0.320724, 27.6978, -20.6004, -0.570724, 16.3007, -10.0967, -0.570724, 8.20412, -28.6955, -0.570724, 20.2035, -37.7048, -1.32072, 24.6984, -27.2049, -0.320724, 13.5979, -27.8017, -0.820724, 16.8968, -15.7962, -0.570724, 47.804, -31.0984, -0.820724, 39.0974, -33.2046, -1.32072, 35.7988, -37.402, -0.820724, 19.9003, -16.3974, -0.0707238, 6.10225, -7.70499, -0.0707238, 42.4021, -9.19781, -0.570724, 35.4952, -12.4999, -0.320724, 4.90326, -6.19689, -0.0707238, 40.8961, -30.2029, -0.0707238, 5.80178, -35.5999, -0.820724, 40.302, -44.2987, -0.820724, 45.9967, -22.4045, -0.820724, 24.1017, -38.6028, 0.429276, 2.79636, -36.8004, -0.320724, 5.50404, -49.3976, -0.820724, 6.9987, -20.8956, -0.570724, 27.0965, -29.0008, -0.570724, 10.6008, -41.2994, -0.820724, 49.2951, -36.4989, -0.570724, 48.104, -14.2993, -0.320724, 40.5974, -23.3025, -0.820724, 42.0984, -25.6962, -0.820724, 36.1031, -22.7037, -1.07072, 30.9954, -25.1034, -0.820724, 28.9021, -28.9961, -1.07072, 38.504, -36.2006, -1.07072, 20.1985, -49.398, -0.0707238, 4.3042, -49.4015, 0.429276, 3.09664, 1.75, 0.179276, 1.55, 7.95, -0.0707238, 1.51774, 1.55, 0.179276, 1.75, 1.25, 0.179276, 1.75, 1.3, -0.320724, 49.8, 1.47742, -0.570724, 15.7, 1.26451, -0.570724, 15.7, 49.8, -0.570724, 49.8, 49.8, -1.32072, 31.0258, 49.8, -1.32072, 18.5097, 49.8, -1.07072, 9.12258, 49.8, 0.429276, 2.86452, 27.8968, -0.820724, 49.8, 38.8484, -0.820724, 49.8, 46.671, -0.320724, 49.8, 21.6975, -1.32072, 18.7026, 39.6996, -1.07072, 8.49736, 7.60399, -1.07072, 8.19505, 6.99763, -1.32072, 18.0961, 5.80067, -0.570724, 24.4045, 16.602, 0.179276, 3.3959, 18.9964, -1.07072, 10.0005, 10.8994, -1.32072, 22.5955, 21.1036, -0.570724, 39.0967, 9.10168, -1.07072, 28.3007, 5.20245, -0.320724, 39.1002, 12.6975, -0.820724, 39.0951, 4.60378, -0.0707238, 4.90396, 5.4981, -0.820724, 30.9989, 31.0023, -1.07072, 45.097, 44.2025, -0.820724, 37.2995, 30.7031, -1.32072, 31.6022, 30.704, -0.820724, 37.0013, 46.596, -0.820724, 6.39756, 40.6013, 0.179276, 4.30327, 30.6965, -0.820724, 12.4013, 36.4035, -0.820724, 7.60162, 23.2017, -0.820724, 7.90212, 30.7008, -1.32072, 18.0997, 4.00061, -0.320724, 36.0975, 9.69815, 0.179276, 2.80097, 7.30127, -0.320724, 3.70497, 48.1036, 0.179276, 3.70382, 21.3986, -1.32072, 27.4027, 8.50346, -0.320724, 42.9964, 14.5032, -0.820724, 41.204, 49.2954, -0.820724, 6.70453, 4.60086, -0.570724, 13.5977, 4.6012, -0.570724, 7.59869, 12.6991, -0.820724, 28.5965, 26.8037, -0.0707238, 3.10342, 31.3034, -0.0707238, 5.19672, 31.0002, -0.820724, 8.19645, 36.098, 0.429276, 2.49715, 3.70369, -0.570724, 16.605, 14.5048, -1.07072, 30.6954, 25.9009, -0.0707238, 4.89998, 21.6965, -0.320724, 4.60202, 45.3983, -0.820724, 44.2043, 3.70191, -0.0707238, 5.79895, 44.5007, -0.570724, 44.4971, 42.4009, -1.07072, 40.0008, 2.49643, -0.320724, 21.097, 43.9019, -0.0707238, 4.00025, 47.1969, -0.570724, 43.8981, 44.1981, -0.0707238, 4.90402, 0.697937, -0.0707238, 42.0995)
polygons = [PackedInt32Array(0, 4, 5), PackedInt32Array(5, 4, 6), PackedInt32Array(6, 4, 3), PackedInt32Array(6, 3, 1), PackedInt32Array(1, 3, 2), PackedInt32Array(9, 11, 10), PackedInt32Array(10, 11, 8), PackedInt32Array(10, 8, 7), PackedInt32Array(16, 35, 12), PackedInt32Array(12, 41, 13), PackedInt32Array(13, 27, 0), PackedInt32Array(0, 27, 4), PackedInt32Array(4, 24, 3), PackedInt32Array(3, 38, 2), PackedInt32Array(2, 38, 7), PackedInt32Array(7, 20, 10), PackedInt32Array(10, 25, 9), PackedInt32Array(9, 25, 14), PackedInt32Array(14, 19, 15), PackedInt32Array(15, 19, 16), PackedInt32Array(35, 31, 12), PackedInt32Array(16, 37, 35), PackedInt32Array(41, 42, 13), PackedInt32Array(12, 40, 41), PackedInt32Array(13, 42, 27), PackedInt32Array(27, 24, 4), PackedInt32Array(24, 29, 3), PackedInt32Array(3, 17, 38), PackedInt32Array(38, 20, 7), PackedInt32Array(20, 23, 10), PackedInt32Array(10, 18, 25), PackedInt32Array(25, 19, 14), PackedInt32Array(19, 37, 16), PackedInt32Array(31, 40, 12), PackedInt32Array(35, 40, 31), PackedInt32Array(37, 30, 35), PackedInt32Array(41, 30, 42), PackedInt32Array(40, 30, 41), PackedInt32Array(42, 28, 27), PackedInt32Array(27, 32, 24), PackedInt32Array(29, 34, 3), PackedInt32Array(24, 32, 29), PackedInt32Array(17, 20, 38), PackedInt32Array(3, 34, 17), PackedInt32Array(23, 26, 10), PackedInt32Array(20, 36, 23), PackedInt32Array(18, 19, 25), PackedInt32Array(10, 26, 18), PackedInt32Array(19, 21, 37), PackedInt32Array(35, 30, 40), PackedInt32Array(37, 21, 30), PackedInt32Array(30, 28, 42), PackedInt32Array(28, 39, 27), PackedInt32Array(27, 39, 32), PackedInt32Array(29, 33, 34), PackedInt32Array(32, 33, 29), PackedInt32Array(17, 36, 20), PackedInt32Array(34, 36, 17), PackedInt32Array(23, 22, 26), PackedInt32Array(36, 34, 23), PackedInt32Array(18, 21, 19), PackedInt32Array(26, 21, 18), PackedInt32Array(21, 28, 30), PackedInt32Array(28, 26, 39), PackedInt32Array(39, 22, 32), PackedInt32Array(33, 23, 34), PackedInt32Array(32, 22, 33), PackedInt32Array(22, 39, 26), PackedInt32Array(23, 33, 22), PackedInt32Array(26, 28, 21), PackedInt32Array(9, 44, 11), PackedInt32Array(11, 44, 45), PackedInt32Array(11, 45, 43), PackedInt32Array(11, 43, 8), PackedInt32Array(53, 54, 50), PackedInt32Array(50, 48, 46), PackedInt32Array(46, 48, 47), PackedInt32Array(48, 54, 51), PackedInt32Array(51, 54, 52), PackedInt32Array(52, 53, 49), PackedInt32Array(49, 53, 44), PackedInt32Array(54, 48, 50), PackedInt32Array(53, 52, 54), PackedInt32Array(44, 53, 45), PackedInt32Array(45, 53, 43), PackedInt32Array(43, 53, 50), PackedInt32Array(48, 51, 55), PackedInt32Array(55, 51, 56), PackedInt32Array(56, 51, 52), PackedInt32Array(56, 52, 57), PackedInt32Array(57, 52, 49), PackedInt32Array(55, 56, 58), PackedInt32Array(58, 56, 57), PackedInt32Array(58, 57, 49), PackedInt32Array(58, 49, 59), PackedInt32Array(61, 60, 64), PackedInt32Array(64, 60, 63), PackedInt32Array(64, 63, 62), PackedInt32Array(65, 58, 59), PackedInt32Array(68, 79, 59), PackedInt32Array(59, 83, 65), PackedInt32Array(65, 63, 60), PackedInt32Array(63, 75, 62), PackedInt32Array(62, 89, 67), PackedInt32Array(67, 68, 66), PackedInt32Array(79, 77, 59), PackedInt32Array(68, 78, 79), PackedInt32Array(83, 73, 65), PackedInt32Array(59, 76, 83), PackedInt32Array(65, 81, 63), PackedInt32Array(75, 70, 62), PackedInt32Array(63, 80, 75), PackedInt32Array(89, 88, 67), PackedInt32Array(62, 70, 89), PackedInt32Array(67, 84, 68), PackedInt32Array(77, 76, 59), PackedInt32Array(79, 78, 77), PackedInt32Array(68, 71, 78), PackedInt32Array(73, 81, 65), PackedInt32Array(83, 69, 73), PackedInt32Array(76, 82, 83), PackedInt32Array(81, 80, 63), PackedInt32Array(75, 74, 70), PackedInt32Array(80, 74, 75), PackedInt32Array(88, 84, 67), PackedInt32Array(89, 70, 88), PackedInt32Array(84, 85, 68), PackedInt32Array(77, 87, 76), PackedInt32Array(78, 71, 77), PackedInt32Array(68, 85, 71), PackedInt32Array(73, 74, 81), PackedInt32Array(69, 74, 73), PackedInt32Array(83, 86, 69), PackedInt32Array(82, 86, 83), PackedInt32Array(76, 86, 82), PackedInt32Array(81, 74, 80), PackedInt32Array(74, 90, 70), PackedInt32Array(88, 90, 84), PackedInt32Array(70, 90, 88), PackedInt32Array(84, 90, 85), PackedInt32Array(87, 86, 76), PackedInt32Array(77, 71, 87), PackedInt32Array(85, 72, 71), PackedInt32Array(69, 87, 74), PackedInt32Array(86, 87, 69), PackedInt32Array(74, 72, 90), PackedInt32Array(90, 72, 85), PackedInt32Array(71, 72, 87), PackedInt32Array(87, 72, 74), PackedInt32Array(94, 93, 91), PackedInt32Array(91, 93, 92), PackedInt32Array(47, 95, 46), PackedInt32Array(46, 95, 96), PackedInt32Array(96, 95, 97), PackedInt32Array(97, 95, 98), PackedInt32Array(95, 99, 98), PackedInt32Array(97, 100, 96), PackedInt32Array(61, 64, 101), PackedInt32Array(101, 64, 103), PackedInt32Array(103, 64, 102), PackedInt32Array(102, 64, 62), PackedInt32Array(0, 5, 104), PackedInt32Array(104, 5, 106), PackedInt32Array(106, 5, 107), PackedInt32Array(107, 5, 6), PackedInt32Array(107, 6, 1), PackedInt32Array(107, 1, 105), PackedInt32Array(110, 109, 111), PackedInt32Array(111, 109, 112), PackedInt32Array(111, 112, 108), PackedInt32Array(104, 106, 114), PackedInt32Array(114, 106, 107), PackedInt32Array(114, 107, 115), PackedInt32Array(115, 107, 105), PackedInt32Array(115, 105, 113), PackedInt32Array(122, 147, 116), PackedInt32Array(116, 154, 117), PackedInt32Array(117, 136, 118), PackedInt32Array(118, 141, 108), PackedInt32Array(108, 144, 111), PackedInt32Array(111, 131, 110), PackedInt32Array(110, 131, 113), PackedInt32Array(113, 143, 115), PackedInt32Array(115, 145, 114), PackedInt32Array(114, 149, 104), PackedInt32Array(104, 164, 119), PackedInt32Array(119, 151, 120), PackedInt32Array(120, 139, 121), PackedInt32Array(121, 133, 122), PackedInt32Array(147, 154, 116), PackedInt32Array(122, 146, 147), PackedInt32Array(154, 155, 117), PackedInt32Array(136, 141, 118), PackedInt32Array(117, 157, 136), PackedInt32Array(141, 144, 108), PackedInt32Array(144, 142, 111), PackedInt32Array(111, 125, 131), PackedInt32Array(131, 143, 113), PackedInt32Array(143, 140, 115), PackedInt32Array(145, 150, 114), PackedInt32Array(115, 140, 145), PackedInt32Array(149, 164, 104), PackedInt32Array(114, 150, 149), PackedInt32Array(164, 163, 119), PackedInt32Array(151, 150, 120), PackedInt32Array(119, 163, 151), PackedInt32Array(139, 133, 121), PackedInt32Array(120, 124, 139), PackedInt32Array(133, 138, 122), PackedInt32Array(147, 155, 154), PackedInt32Array(146, 155, 147), PackedInt32Array(122, 138, 146), PackedInt32Array(155, 128, 117), PackedInt32Array(136, 156, 141), PackedInt32Array(157, 156, 136), PackedInt32Array(117, 127, 157), PackedInt32Array(141, 142, 144), PackedInt32Array(142, 129, 111), PackedInt32Array(125, 130, 131), PackedInt32Array(111, 129, 125), PackedInt32Array(131, 140, 143), PackedInt32Array(145, 124, 150), PackedInt32Array(140, 153, 145), PackedInt32Array(149, 163, 164), PackedInt32Array(150, 151, 149), PackedInt32Array(150, 124, 120), PackedInt32Array(163, 149, 151), PackedInt32Array(139, 162, 133), PackedInt32Array(124, 162, 139), PackedInt32Array(133, 123, 138), PackedInt32Array(146, 128, 155), PackedInt32Array(138, 137, 146), PackedInt32Array(128, 127, 117), PackedInt32Array(156, 142, 141), PackedInt32Array(157, 126, 156), PackedInt32Array(127, 161, 157), PackedInt32Array(142, 126, 129), PackedInt32Array(130, 140, 131), PackedInt32Array(125, 148, 130), PackedInt32Array(129, 126, 125), PackedInt32Array(145, 153, 124), PackedInt32Array(140, 134, 153), PackedInt32Array(162, 132, 133), PackedInt32Array(124, 135, 162), PackedInt32Array(123, 161, 138), PackedInt32Array(133, 160, 123), PackedInt32Array(146, 137, 128), PackedInt32Array(138, 161, 137), PackedInt32Array(128, 137, 127), PackedInt32Array(156, 126, 142), PackedInt32Array(157, 158, 126), PackedInt32Array(161, 158, 157), PackedInt32Array(127, 137, 161), PackedInt32Array(130, 134, 140), PackedInt32Array(148, 135, 130), PackedInt32Array(125, 152, 148), PackedInt32Array(126, 152, 125), PackedInt32Array(153, 134, 124), PackedInt32Array(132, 160, 133), PackedInt32Array(162, 135, 132), PackedInt32Array(124, 134, 135), PackedInt32Array(123, 158, 161), PackedInt32Array(160, 159, 123), PackedInt32Array(158, 159, 126), PackedInt32Array(130, 135, 134), PackedInt32Array(148, 132, 135), PackedInt32Array(152, 160, 148), PackedInt32Array(126, 159, 152), PackedInt32Array(132, 148, 160), PackedInt32Array(123, 159, 158), PackedInt32Array(160, 152, 159), PackedInt32Array(165, 101, 166), PackedInt32Array(166, 101, 103), PackedInt32Array(166, 103, 102), PackedInt32Array(167, 170, 168), PackedInt32Array(168, 170, 171), PackedInt32Array(171, 170, 169), PackedInt32Array(179, 229, 172), PackedInt32Array(172, 229, 173), PackedInt32Array(173, 203, 174), PackedInt32Array(174, 181, 175), PackedInt32Array(175, 211, 176), PackedInt32Array(176, 207, 102), PackedInt32Array(102, 218, 166), PackedInt32Array(166, 206, 165), PackedInt32Array(165, 192, 167), PackedInt32Array(167, 224, 170), PackedInt32Array(170, 227, 169), PackedInt32Array(169, 209, 177), PackedInt32Array(177, 194, 178), PackedInt32Array(178, 225, 179), PackedInt32Array(179, 223, 229), PackedInt32Array(229, 195, 173), PackedInt32Array(203, 181, 174), PackedInt32Array(173, 196, 203), PackedInt32Array(181, 198, 175), PackedInt32Array(211, 207, 176), PackedInt32Array(175, 198, 211), PackedInt32Array(207, 228, 102), PackedInt32Array(218, 215, 166), PackedInt32Array(102, 228, 218), PackedInt32Array(206, 192, 165), PackedInt32Array(166, 205, 206), PackedInt32Array(192, 224, 167), PackedInt32Array(224, 213, 170), PackedInt32Array(227, 204, 169), PackedInt32Array(170, 219, 227), PackedInt32Array(209, 210, 177), PackedInt32Array(169, 190, 209), PackedInt32Array(194, 226, 178), PackedInt32Array(177, 188, 194), PackedInt32Array(225, 223, 179), PackedInt32Array(178, 226, 225), PackedInt32Array(223, 226, 229), PackedInt32Array(195, 196, 173), PackedInt32Array(229, 226, 195), PackedInt32Array(203, 200, 181), PackedInt32Array(196, 208, 203), PackedInt32Array(181, 230, 198), PackedInt32Array(211, 198, 207), PackedInt32Array(207, 230, 228), PackedInt32Array(215, 185, 166), PackedInt32Array(218, 216, 215), PackedInt32Array(228, 199, 218), PackedInt32Array(206, 182, 192), PackedInt32Array(205, 182, 206), PackedInt32Array(166, 185, 205), PackedInt32Array(192, 213, 224), PackedInt32Array(213, 212, 170), PackedInt32Array(204, 190, 169), PackedInt32Array(227, 193, 204), PackedInt32Array(219, 183, 227), PackedInt32Array(170, 212, 219), PackedInt32Array(210, 188, 177), PackedInt32Array(209, 191, 210), PackedInt32Array(190, 191, 209), PackedInt32Array(194, 197, 226), PackedInt32Array(188, 197, 194), PackedInt32Array(225, 226, 223), PackedInt32Array(195, 197, 196), PackedInt32Array(226, 197, 195), PackedInt32Array(200, 201, 181), PackedInt32Array(203, 180, 200), PackedInt32Array(208, 180, 203), PackedInt32Array(196, 188, 208), PackedInt32Array(230, 207, 198), PackedInt32Array(181, 199, 230), PackedInt32Array(230, 199, 228), PackedInt32Array(215, 222, 185), PackedInt32Array(216, 221, 215), PackedInt32Array(218, 201, 216), PackedInt32Array(199, 201, 218), PackedInt32Array(182, 213, 192), PackedInt32Array(205, 185, 182), PackedInt32Array(213, 182, 212), PackedInt32Array(204, 191, 190), PackedInt32Array(193, 191, 204), PackedInt32Array(227, 184, 193), PackedInt32Array(183, 184, 227), PackedInt32Array(219, 212, 183), PackedInt32Array(210, 191, 188), PackedInt32Array(188, 196, 197), PackedInt32Array(201, 199, 181), PackedInt32Array(200, 217, 201), PackedInt32Array(180, 202, 200), PackedInt32Array(208, 187, 180), PackedInt32Array(188, 220, 208), PackedInt32Array(222, 186, 185), PackedInt32Array(215, 221, 222), PackedInt32Array(216, 217, 221), PackedInt32Array(201, 217, 216), PackedInt32Array(185, 186, 182), PackedInt32Array(182, 183, 212), PackedInt32Array(193, 220, 191), PackedInt32Array(184, 189, 193), PackedInt32Array(183, 187, 184), PackedInt32Array(191, 220, 188), PackedInt32Array(200, 202, 217), PackedInt32Array(180, 186, 202), PackedInt32Array(187, 186, 180), PackedInt32Array(208, 214, 187), PackedInt32Array(220, 214, 208), PackedInt32Array(222, 202, 186), PackedInt32Array(221, 202, 222), PackedInt32Array(217, 202, 221), PackedInt32Array(186, 183, 182), PackedInt32Array(193, 189, 220), PackedInt32Array(184, 187, 189), PackedInt32Array(183, 186, 187), PackedInt32Array(214, 189, 187), PackedInt32Array(220, 189, 214), PackedInt32Array(168, 171, 109), PackedInt32Array(109, 171, 112), PackedInt32Array(112, 231, 108), PackedInt32Array(108, 231, 169), PackedInt32Array(169, 231, 171), PackedInt32Array(171, 231, 112)]
geometry_parsed_geometry_type = 1
geometry_collision_mask = 4294967041
cell_size = 0.05
agent_radius = 0.2

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_jk4q4"]
albedo_color = Color(0.38, 0.25726, 0.1862, 1)

[sub_resource type="BoxMesh" id="BoxMesh_pbq2r"]
material = SubResource("StandardMaterial3D_jk4q4")
size = Vector3(0.05, 1.9, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_3r5q7"]
size = Vector3(0.05, 1.9, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_hj3kn"]
albedo_color = Color(0.38, 0.331867, 0.304, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_34edd"]
size = Vector3(2.9, 2.2, 2.9)

[node name="Game" type="NavigationRegion3D"]
navigation_mesh = SubResource("NavigationMesh_od0y4")
script = ExtResource("1_nixut")

[node name="Container" type="Node3D" parent="."]

[node name="DayLight" type="DirectionalLight3D" parent="Container"]
unique_name_in_owner = true
transform = Transform3D(-0.866023, -0.236132, 0.440733, -4.76885e-09, 0.881459, 0.472261, -0.500003, 0.408988, -0.763364, 0, 0, 0)
shadow_enabled = true

[node name="NightLight" type="DirectionalLight3D" parent="Container"]
unique_name_in_owner = true
transform = Transform3D(-0.866023, -0.236132, 0.440733, -4.76885e-09, 0.881459, 0.472261, -0.500003, 0.408988, -0.763365, 0, 0, 0)
visible = false
light_color = Color(0.945098, 1, 1, 1)
light_energy = 0.2

[node name="WorldEnvironment" type="WorldEnvironment" parent="Container"]
unique_name_in_owner = true
environment = ExtResource("2_d8gdf")

[node name="Player" parent="Container" instance=ExtResource("3_m520b")]
unique_name_in_owner = true

[node name="Terrain3D" parent="Container" instance=ExtResource("3_0vj7r")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.08165e-12, -4.83641, 2.08165e-12)

[node name="GroundwaterContainer" type="Node3D" parent="Container"]
unique_name_in_owner = true

[node name="LizardContainer" type="Node3D" parent="Container"]
unique_name_in_owner = true

[node name="Home" type="Node3D" parent="Container"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.247081, 0)

[node name="Door" type="StaticBody3D" parent="Container/Home"]
unique_name_in_owner = true
transform = Transform3D(1.31134e-07, 0, -1, 0, 1, 0, 1, 0, 1.31134e-07, -1.93427e-07, 1, -1.475)
visible = false
collision_layer = 2
script = ExtResource("4_25n3v")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Container/Home/Door"]
mesh = SubResource("BoxMesh_pbq2r")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Container/Home/Door"]
shape = SubResource("BoxShape3D_3r5q7")

[node name="CSGCombiner3D" type="CSGCombiner3D" parent="Container/Home"]
material_override = SubResource("StandardMaterial3D_hj3kn")
use_collision = true

[node name="Foundation" type="CSGBox3D" parent="Container/Home/CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.08165e-12, -0.5, 2.08165e-12)
size = Vector3(3, 1, 3)

[node name="Floor" type="CSGBox3D" parent="Container/Home/CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.08165e-12, 0.025, 2.08165e-12)
size = Vector3(3, 0.05, 3)

[node name="Roof" type="CSGBox3D" parent="Container/Home/CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.08165e-12, 2.375, 2.08165e-12)
size = Vector3(3.5, 0.05, 3.5)

[node name="Wall1" type="CSGBox3D" parent="Container/Home/CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.475, 1.2, 2.08165e-12)
size = Vector3(0.05, 2.3, 3)

[node name="Wall2" type="CSGBox3D" parent="Container/Home/CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.475, 1.2, 2.08165e-12)
size = Vector3(0.05, 2.3, 3)

[node name="Wall3" type="CSGBox3D" parent="Container/Home/CSGCombiner3D"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 6.44764e-08, 1.2, 1.475)
size = Vector3(0.05, 2.3, 2.9)

[node name="Wall4" type="CSGBox3D" parent="Container/Home/CSGCombiner3D"]
transform = Transform3D(1.31134e-07, 0, -1, 0, 1, 0, 1, 0, 1.31134e-07, -1.93425e-07, 1.2, -1.475)
layers = 0
size = Vector3(0.05, 2.3, 2.9)

[node name="Doorway" type="CSGBox3D" parent="Container/Home/CSGCombiner3D/Wall4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.08165e-12, -0.2, 2.08165e-12)
layers = 0
operation = 2
size = Vector3(0.05, 1.9, 1)

[node name="Indoors" type="Area3D" parent="Container/Home"]
unique_name_in_owner = true
collision_layer = 4

[node name="CollisionShape3D" type="CollisionShape3D" parent="Container/Home/Indoors"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.08165e-12, 1.15, 2.08165e-12)
shape = SubResource("BoxShape3D_34edd")

[node name="MenuContainer" type="PanelContainer" parent="."]
unique_name_in_owner = true
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainMenu" parent="MenuContainer" instance=ExtResource("3_3ao77")]
unique_name_in_owner = true
layout_mode = 2
pause_menu = true
